# fp2023

OCamlWithEffects/: README.md
OCamlWithEffects/demos/: demoComplexEffect.t  demoEffect.t  demoFact.t  demoFoldLeft.t  demoGreaterOrLess.t  demoSafeDiv.t
OCamlWithEffects/lib/: ast.ml  ast.mli  dune  inferencer.ml  parser.ml  run.ml  run.mli  type.ml
OCamlWithEffects/lib/ast/: ast.ml  ast.mli
OCamlWithEffects/lib/inferencer/: errors.ml  inf_errors.ml  inf_errors.mli  inf_pprint.ml  inf_pprint.mli  inferencer.ml  pprint.ml  typedtree.ml  typedtree.mli
OCamlWithEffects/lib/interpreter/: errorsi.ml  int_errors.ml  int_errors.mli  int_pprint.ml  int_pprint.mli  interpreter.ml  interpreter.mli  pprinti.ml  values.ml  values.mli
OCamlWithEffects/lib/parser/: auxiliary.ml  auxiliary.mli  errorsp.ml  parser.ml  parser_errors.ml  parser_pprint.ml  pprintp.ml
OCamlWithEffects/lib/tests/: parser_tests.ml
OCamlWithEffects/tests/: dune  inference_tests.ml  interpreter_test.ml  parser_tests.ml  parser_tests.mli
OCamlWithEffects/tests/inferencer/: inf_complex_expr.ml  inf_declaration_and_functions.ml  inf_effects_and_handlers.ml  inf_list_and_tuple.ml  inf_pattern_matching.ml  inf_polymorphysm.ml  inf_simple_expr.ml
OCamlWithEffects/tests/interpreter/: dune  int_complex_expr.ml  int_declaration_and_functions.ml  int_effects_and_handlers.ml  int_list_and_tuple.ml  int_pattern_matching.ml  int_simple_expr.ml
OCamlWithEffects/tests/parser/: parse_complex_expr.ml  parse_declaration_and_functions.ml  parse_effects_and_handlers.ml  parse_list_and_tuple.ml  parse_pattern_matching.ml  parse_simple_expr.ml
OCamlWithEffects/tests/runner/: test_run.ml
