(include_subdirs unqualified)

(library
 (name ocaml_with_effects_lib)
 (public_name OCamlWithEffects.Lib)
 (modules
  Ast
  Auxiliary
  Parser
  Pprintp
  Errorsp
  Typedtree
  Interpreter
  Errorsi
  Pprinti
  Values
  Inferencer
  Errors
  Pprint
  Run)
 (libraries base angstrom)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))
